# tracc

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: confirm.rs  help.rs  layout.rs  main.rs  timesheet.rs  tracc.rs
src/tracc/: edit.rs  history.rs  input.rs  mod.rs  navigation.rs  render.rs
