[package]
name = "tracc"
version = "0.1.0"
authors = ["kageru <kageru@encode.moe>"]
edition = "2018"

[dependencies]
ratatui = { version = "0.30.0", features = ["termion"] }
termion = "1.5"
serde_json = "1"
itertools = "0.9.0"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros", "serde"] }
regex = "1.3.7"
lazy_static = "1.4.0"
