[package]
name = "tracc"
version = "0.1.0"
authors = ["kageru <kageru@encode.moe>"]
edition = "2018"

[dependencies]
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = "0.29"
serde_json = "1.0.149"
itertools = "0.14.0"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros", "serde"] }
regex = "1.12.3"
lazy_static = "1.4.0"
